--- a/naunet/templates/base/cpp/src/naunet_physics.cpp.j2
+++ b/naunet/templates/base/cpp/src/naunet_physics.cpp.j2
@@ -5,8 +5,8 @@
 
 #include "naunet_constants.h"
 #include "naunet_macros.h"
+#include "naunet_physics.h"
 #include "naunet_utilities.h"
-#include "{{ physics.header }}"
 
 // clang-format off
 {% if info.device == "gpu" -%} __device__ __host__ {% endif -%}
