--- a/naunet/templates/odeint/src/naunet.cpp.j2
+++ b/naunet/templates/odeint/src/naunet.cpp.j2
@@ -1,10 +1,7 @@
 #include <boost/numeric/ublas/io.hpp>
 #include <boost/numeric/ublas/lu.hpp>
-/* {% if header %} */
-#include "{{ header }}"
-/* {% else %} */
-#include "naunet_data.h"
-/* {% endif %} */
+
+#include "naunet.h"
 #include "naunet_macros.h"
 #include "naunet_ode.h"
 #include "naunet_physics.h"
