--- a/naunet/templates/cvode/src/naunet_fex.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_fex.cpp.j2
@@ -9,22 +9,18 @@
 #include <nvector/nvector_cuda.h>
 #include <sunmatrix/sunmatrix_cusparse.h>
 /* {% endif -%} */
-/* {% if ode.header %} */
-#include "{{ ode.header }}"
-/* {% else %} */
-#include <sundials/sundials_types.h>  // defs. of realtype, sunindextype
-
-#include "naunet_data.h"
-/* {% endif %} */
 #include "naunet_constants.h"
 #include "naunet_macros.h"
+#include "naunet_ode.h"
 #include "naunet_physics.h"
 
-#define IJth(A, i, j)            SM_ELEMENT_D(A, i, j)
-#define NVEC_CUDA_CONTENT(x)     ((N_VectorContent_Cuda)(x->content))
-#define NVEC_CUDA_STREAM(x)      (NVEC_CUDA_CONTENT(x)->stream_exec_policy->stream())
-#define NVEC_CUDA_BLOCKSIZE(x)   (NVEC_CUDA_CONTENT(x)->stream_exec_policy->blockSize())
-#define NVEC_CUDA_GRIDSIZE(x, n) (NVEC_CUDA_CONTENT(x)->stream_exec_policy->gridSize(n))
+#define IJth(A, i, j) SM_ELEMENT_D(A, i, j)
+#define NVEC_CUDA_CONTENT(x) ((N_VectorContent_Cuda)(x->content))
+#define NVEC_CUDA_STREAM(x) (NVEC_CUDA_CONTENT(x)->stream_exec_policy->stream())
+#define NVEC_CUDA_BLOCKSIZE(x) \
+    (NVEC_CUDA_CONTENT(x)->stream_exec_policy->blockSize())
+#define NVEC_CUDA_GRIDSIZE(x, n) \
+    (NVEC_CUDA_CONTENT(x)->stream_exec_policy->gridSize(n))
 
 /* {% if info.method == "cusparse" -%} */
 __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
@@ -59,7 +55,7 @@ __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
 #if NHEATPROCS
         realtype kh[NHEATPROCS] = {0.0};
         EvalHeatingRates(kh, y_cur, udata);
-#endif 
+#endif
 
 #if NCOOLPROCS
         realtype kc[NCOOLPROCS] = {0.0};
@@ -107,7 +103,7 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
 #if NHEATPROCS
     realtype kh[NHEATPROCS] = {0.0};
     EvalHeatingRates(kh, y, u_data);
-#endif 
+#endif
 
 #if NCOOLPROCS
     realtype kc[NCOOLPROCS] = {0.0};
@@ -146,12 +142,13 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
     // copy the user data for each system/cell
     cudaMalloc((void **)&d_udata, sizeof(NaunetData) * nsystem);
     cudaMemcpyAsync(d_udata, h_udata, sizeof(NaunetData) * nsystem,
-               cudaMemcpyHostToDevice, stream);
+                    cudaMemcpyHostToDevice, stream);
     // cudaDeviceSynchronize();
 
     // unsigned block_size = min(BLOCKSIZE, nsystem);
     // unsigned grid_size =
-    //     max(1, min(MAX_NSYSTEMS_PER_STREAM / BLOCKSIZE, nsystem / BLOCKSIZE));
+    //     max(1, min(MAX_NSYSTEMS_PER_STREAM / BLOCKSIZE, nsystem /
+    //     BLOCKSIZE));
     size_t block_size = NVEC_CUDA_BLOCKSIZE(u);
     size_t grid_size  = NVEC_CUDA_GRIDSIZE(u, nsystem);
     FexKernel<<<grid_size, block_size, 0, stream>>>(y, ydot, d_udata, nsystem);
